# hermes-gizmo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  __init__.py  plugin.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
dashboard/: manifest.json  plugin_api.py
dashboard-plugin/gizmo/: __init__.py  plugin.yaml
dashboard-plugin/gizmo/dashboard/: manifest.json  plugin_api.py
dashboard-plugin/tool-slimmer/: __init__.py  plugin.yaml
dashboard-plugin/tool-slimmer/dashboard/: manifest.json  plugin_api.py
dashboard-plugin/tool-slimmer/examples/: prompts.yaml  tools.yaml
docs/: dashboard-plugin.md  gizmo-compatibility.md  gizmo-eval-report.md  guided-setup.md  hermes-core-integration.md  privacy.md  quickstart.md  release-checklist.md  troubleshooting.md
docs/reports/: latest-eval.md
examples/: config.yaml
review/: HGZ-14-implementation-review.md  HGZ-16-repair-rereview.md  HGZ-18-final-rereview.md
scripts/: check-dashboard-assets.sh  check-wheel-assets.sh  install-hermes-gizmo.sh  install-hermes-tool-slimmer.sh  self-heal-gizmo.sh  self-heal-tool-slimmer.sh  troubleshoot-hermes-gizmo.sh  troubleshoot-hermes-tool-slimmer.sh  update-hermes-and-repair-gizmo.sh  update-hermes-and-repair-tool-slimmer.sh
src/hermes_gizmo/: __init__.py  advisor.py  anthropic_tool_search.py  bm25.py  cli.py  commands.py  config.py  corpus.py  embeddings.py  index_store.py  integration.py  metrics.py  native.py  policy.py  private_io.py  schemas.py  selector.py  session_tools.py  skills_catalog.py  skills_tools.py  state_migration.py  tokenizer.py  tools.py  toolsets.py  two_pass.py  types.py
src/hermes_tool_slimmer/: __init__.py  advisor.py  cli.py  config.py  corpus.py  embeddings.py  index_store.py  integration.py  metrics.py  native.py  policy.py  private_io.py  schemas.py  selector.py  session_tools.py  skills_catalog.py  skills_tools.py  state_migration.py  tools.py  two_pass.py  types.py
tests/: conftest.py  test_config.py  test_corpus.py  test_dashboard_layout.py  test_embeddings.py  test_gizmo_namespace.py  test_gizmo_shims.py  test_handlers_integration.py  test_hgz14_regressions.py  test_index_metrics_anthropic.py  test_selector.py  test_session_tools.py  test_skills_catalog.py  test_skills_tools.py  test_state_migration.py  test_state_migration_cli.py  test_two_pass.py
