[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/.github",
  "/__init__.py",
  "/dashboard",
  "/dashboard-plugin",
  "/docs",
  "/examples",
  "/scripts",
  "/src",
  "/tests",
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/SECURITY.md",
  "/plugin.yaml",
  "/pyproject.toml",
]
artifacts = [
  "/dashboard/dist/index.js",
  "/dashboard/dist/style.css",
  "/dashboard-plugin/tool-slimmer/dashboard/dist/index.js",
  "/dashboard-plugin/tool-slimmer/dashboard/dist/style.css",
]

[project]
name = "hermes-tool-slimmer"
version = "0.5.3"
description = "Reduce Hermes Agent tool schema overhead with provider-aware tool selection"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hermes Tool Slimmer contributors" }]
keywords = ["hermes", "llm", "tools", "mcp", "tool-selection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]
semantic = [
  "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/alias8818/hermes-tool-slimmer"
Repository = "https://github.com/alias8818/hermes-tool-slimmer"
Issues = "https://github.com/alias8818/hermes-tool-slimmer/issues"

[project.entry-points."hermes_agent.plugins"]
tool-slimmer = "hermes_tool_slimmer"

[project.scripts]
hermes-tool-slimmer = "hermes_tool_slimmer.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
