[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/.github",
  "/__init__.py",
  "/dashboard",
  "/dashboard-plugin",
  "/docs",
  "/examples",
  "/scripts",
  "/src",
  "/tests",
  "/CHANGELOG.md",
  "/LICENSE",
  "/NOTICE",
  "/README.md",
  "/SECURITY.md",
  "/plugin.yaml",
  "/pyproject.toml",
]
artifacts = [
  "/dashboard/dist/index.js",
  "/dashboard/dist/style.css",
]

[project]
name = "hermes-tool-slimmer"
version = "0.6.4"
description = "Hermes Agent plugin for deterministic tool-schema selection, diagnostics, and dashboard visibility"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hermes Gizmo contributors" }]
keywords = ["hermes", "gizmo", "llm", "tools", "mcp", "tool-selection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.4",
  "mypy>=1.10",
  "build>=1.2",
  "numpy>=1.26",
  "types-PyYAML>=6.0",
]
semantic = [
  "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/rzyns/hermes-gizmo"
Repository = "https://github.com/rzyns/hermes-gizmo"
Issues = "https://github.com/rzyns/hermes-gizmo/issues"
Upstream = "https://github.com/alias8818/hermes-tool-slimmer"

[project.entry-points."hermes_agent.plugins"]
tool-slimmer = "hermes_tool_slimmer"
gizmo = "hermes_gizmo"

[project.scripts]
hermes-tool-slimmer = "hermes_tool_slimmer.cli:main"
hermes-gizmo = "hermes_gizmo.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_gizmo", "src/hermes_tool_slimmer"]
include = [
  "/src/hermes_gizmo",
  "/src/hermes_tool_slimmer",
  "/dashboard",
  "/dashboard-plugin",
]

[tool.hatch.build.targets.wheel.force-include]
"dashboard" = "dashboard"
"dashboard-plugin" = "dashboard-plugin"
"plugin.yaml" = "plugin.yaml"
"NOTICE" = "NOTICE"
